--- a/src/Presentation/Views/Authors/Authors.cshtml
+++ b/src/Presentation/Views/Authors/Authors.cshtml
@@ -1,4 +1,4 @@
-@model Nika1337.Library.Domain.RequestFeatures.PagedList<Nika1337.Library.Presentation.Models.Authors.AuthorViewModel>
+@model Nika1337.Library.Domain.RequestFeatures.PagedList<Nika1337.Library.Presentation.Models.Authors.AuthorPreviewViewModel>
 
 @{
     ViewData["Title"] = "Authors";
@@ -36,7 +36,7 @@
             <div class="card h-100 shadow-sm d-flex flex-column">
                 <div class="card-header d-flex justify-content-between align-items-center text-white">
                     <span class="card-header-name">@author.Name</span>
-                    @if (!author.DeletedDate.HasValue)
+                    @if (author.IsActive)
                     {
                         <span class="badge bg-success">Active</span>
                     }
@@ -82,7 +82,7 @@
                     <td>@author.DateOfBirth.ToShortDateString()</td>
                     <td>@author.IsAlive</td>
                     <td>
-                        @if (!author.DeletedDate.HasValue)
+                        @if (author.IsActive)
                         {
                             <span class="badge bg-success">Active</span>
                         }
