--- a/src/Presentation/Views/Reports/GenerateReport.cshtml
+++ b/src/Presentation/Views/Reports/GenerateReport.cshtml
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="d-flex align-items-end justify-content-end myfab-container">
-                        <button type="submit" class="btn btn-primary myfab">Generate Report</button>
+                        <button type="button" class="btn btn-primary myfab" onclick="navigateToReport()">Generate Report</button>
                     </div>
                 </div>
             </div>
