--- a/src/Presentation/Views/AuditLog/AuditLogs.cshtml
+++ b/src/Presentation/Views/AuditLog/AuditLogs.cshtml
@@ -105,7 +105,7 @@
                     <td><span class="badge @GetBadgeClass(log.Action)">@log.Action</span></td>
                     <td>@log.Timestamp</td>
                     <td>
-                        <button class="btn btn-dark btn-sm no-wrap" onclick='showLogDetails(@Json.Serialize(log))'>
+                        <button class="btn btn-info btn-sm no-wrap" onclick='showLogDetails(@Json.Serialize(log))'>
                             View Details
                         </button>
                     </td>
