--- a/src/Presentation/Views/Shared/_PagingPartial.cshtml
+++ b/src/Presentation/Views/Shared/_PagingPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Nika1337.Library.Domain.RequestFeatures.MetaData
 
-<nav aria-label="Page navigation" class="mb-4">
+<nav aria-label="Page navigation" style="width: fit-content; height: fit-content">
     <ul class="pagination">
         @if (Model.HasPrevious)
         {
